# ChangeLog for media-libs/exiftool
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/exiftool/ChangeLog,v 1.32 2008/01/13 19:39:05 graaff Exp $

*exiftool-7.11 (13 Jan 2008)

  13 Jan 2008; Hans de Graaff <graaff@gentoo.org> +exiftool-7.11.ebuild:
  Version bump

  16 Dec 2007; Ferris McCormick <fmccor@gentoo.org> exiftool-7.00.ebuild:
  Sparc stable, bug #202457; good since early November.

  16 Dec 2007; Markus Meier <maekke@gentoo.org> exiftool-7.00.ebuild:
  x86 stable, bug #202457

  16 Dec 2007; nixnut <nixnut@gentoo.org> exiftool-7.00.ebuild:
  Stable on ppc wrt bug 202457

  16 Dec 2007; Samuli Suominen <drac@gentoo.org> exiftool-7.00.ebuild:
  amd64 stable wrt #202457

*exiftool-7.06 (16 Dec 2007)

  16 Dec 2007; Hans de Graaff <graaff@gentoo.org> -exiftool-6.94.ebuild,
  -exiftool-6.98.ebuild, +exiftool-7.06.ebuild:
  Version bump to latest development version. 
  Remove intermediate development releases that won't become stable.

*exiftool-7.00 (05 Nov 2007)

  05 Nov 2007; Hans de Graaff <graaff@gentoo.org> +exiftool-7.00.ebuild:
  Version bump. Enable tests as they work fine.

*exiftool-6.98 (30 Sep 2007)

  30 Sep 2007; Hans de Graaff <graaff@gentoo.org> +exiftool-6.98.ebuild:
  Version bump, add quoting and use emake.

  30 Sep 2007; Hans de Graaff <graaff@gentoo.org> -exiftool-6.81.ebuild:
  Remove old stable version

  21 Aug 2007; Gustavo Zacarias <gustavoz@gentoo.org> exiftool-6.90.ebuild:
  Stable on sparc wrt #189264

  20 Aug 2007; Markus Ullmann <jokey@gentoo.org> exiftool-6.90.ebuild:
  Stable on x86 wrt bug #189264

  18 Aug 2007; Christoph Mende <angelos@gentoo.org> exiftool-6.90.ebuild:
  Stable on amd64 wrt bug #189264

  18 Aug 2007; nixnut <nixnut@gentoo.org> exiftool-6.90.ebuild:
  Stable on ppc wrt bug 189264

*exiftool-6.94 (04 Aug 2007)

  04 Aug 2007; Hans de Graaff <graaff@gentoo.org> +exiftool-6.94.ebuild:
  Version bump, closes bug 175110
