@@ -5,6 +5,7 @@ DIST Image-ExifTool-6.90.tar.gz 1394227 RMD160 83e322772905f6c72b9c79038f65b7685
 DIST Image-ExifTool-7.00.tar.gz 1470095 RMD160 8f4c7d75288d3e161afe07ff0c69c20ec19278fa SHA1 bc6a0be62d6ed79adcb236a6371dc215568da374 SHA256 51fe25694c8031bc49468aa07fe00590a4fb5f7cca6eced51599bfd78fd39197
 DIST Image-ExifTool-7.06.tar.gz 1501823 RMD160 618e7adfe6c829fec409a324009dfe60650d7d5c SHA1 f939dc9a860fa8fc2afa5353433e3a6404a24702 SHA256 97ccba4a872b2acb0ff3d74417a34928276fee3d22219b3607d200a506dcf2c6
 DIST Image-ExifTool-7.11.tar.gz 1528839 RMD160 4f1a11a8916eb2f97527b78fc85dd83960c1bcd4 SHA1 b8977ebc656ced71ad7e0394253104f608eaecb9 SHA256 78676c203fd71ef3ad16f154c08dc68cf9946f66bed45dcf9c71c37ce4b8b828
+DIST Image-ExifTool-7.13.tar.gz 1538635 RMD160 2ead6890c274f3899703474e3fedd9b87f2340d1 SHA1 4791f3c37aa802505a64c00ea805290926ef35f8 SHA256 848fca14022be595fb794b302790f1cabc79d39ac2de79f1e57de65afb783f26
 EBUILD exiftool-6.90.ebuild 813 RMD160 f9f111f9406cafe0b3ca808ad62124330d166ff5 SHA1 ff6b539b269ef61a6b9e328f2b14845a3b69949d SHA256 04e575eb0734179749ec69ecbac784bb8763e4d28abad501a2ecc033d99a2671
 MD5 935d84fa8cc82fca244107821bf6c7eb exiftool-6.90.ebuild 813
 RMD160 f9f111f9406cafe0b3ca808ad62124330d166ff5 exiftool-6.90.ebuild 813
@@ -21,10 +22,14 @@ EBUILD exiftool-7.11.ebuild 833 RMD160 536ad27b07941c2479dedf00b44070b4c3c449fb 
 MD5 2205ef1203580f24436ca6a7f0f3dd83 exiftool-7.11.ebuild 833
 RMD160 536ad27b07941c2479dedf00b44070b4c3c449fb exiftool-7.11.ebuild 833
 SHA256 b0841b7842017510853fabccb24e29781de2ab239d94a2e51a88b1bb1bb049fa exiftool-7.11.ebuild 833
-MISC ChangeLog 4692 RMD160 8d14b127777ad2ca668b71151788838e3b2f3f91 SHA1 00260bfb7d50a1ff85b64c486e11e0b2b39d7af9 SHA256 2c06b3f11a654e98ce466ed060b47437aa7573fab5b565b4393a019e6cebb354
-MD5 a3dc2b5ca0c2dd5de71d80f84ec7b15f ChangeLog 4692
-RMD160 8d14b127777ad2ca668b71151788838e3b2f3f91 ChangeLog 4692
-SHA256 2c06b3f11a654e98ce466ed060b47437aa7573fab5b565b4393a019e6cebb354 ChangeLog 4692
+EBUILD exiftool-7.13.ebuild 833 RMD160 d238318a97b9efc4cd00bc4abf9403a4600910e2 SHA1 8c3e2b3f2c062aa467fa70c4acdab8428d5f3fdb SHA256 d8c975b0f885121f417bb8b2770dcce87b62d0af8057351706cb7bdc619a43d6
+MD5 94730541bd5d8e139140bda5c326930f exiftool-7.13.ebuild 833
+RMD160 d238318a97b9efc4cd00bc4abf9403a4600910e2 exiftool-7.13.ebuild 833
+SHA256 d8c975b0f885121f417bb8b2770dcce87b62d0af8057351706cb7bdc619a43d6 exiftool-7.13.ebuild 833
+MISC ChangeLog 4819 RMD160 3f70f64e6d157481dfbf565c426be837c1148417 SHA1 56505a8d0dd9ec081d3049769e4308530eb14790 SHA256 066c94c348e504cf1493bb7e4dc7eeb68510c029db3acfb224a360926b9e6545
+MD5 c6e99773de85a6151812df7b3409f0ea ChangeLog 4819
+RMD160 3f70f64e6d157481dfbf565c426be837c1148417 ChangeLog 4819
+SHA256 066c94c348e504cf1493bb7e4dc7eeb68510c029db3acfb224a360926b9e6545 ChangeLog 4819
 MISC metadata.xml 245 RMD160 07762a1fa61a8e3a087699040581bcf40ebf9e2a SHA1 3adcb7c33de3b1373ea0cdb736d42538ac919edc SHA256 0f2a76638260d6f712f50ce1f79880b49bc7ad17f83252949a5f96ab5ba4d2bb
 MD5 e011017b29158f9a913f4d9efffa23de metadata.xml 245
 RMD160 07762a1fa61a8e3a087699040581bcf40ebf9e2a metadata.xml 245
@@ -41,10 +46,13 @@ SHA256 14e5b9fc299ffc30e4abade749fabbe5c52ef0d0e4380614a68bb5ae7da22150 files/di
 MD5 0d32b12658e8c7eea3614737829db82c files/digest-exiftool-7.11 262
 RMD160 d0a91b936eb4b682ecbb422c85a70a0613a4764f files/digest-exiftool-7.11 262
 SHA256 ce416b6a86d1a09de506c5707bae8c3227486d58eacea42e38c9187ee3e18938 files/digest-exiftool-7.11 262
+MD5 52d50f966a4bf5669a5ec080355b296d files/digest-exiftool-7.13 262
+RMD160 f34dbabbb1b4d5d3c7d28f8b244055a664841d3b files/digest-exiftool-7.13 262
+SHA256 8ff477f5fc93d3fcd4695115aa02d5d0d0e439ed06378a748faf761860bb5633 files/digest-exiftool-7.13 262
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.7 (GNU/Linux)
 
-iD8DBQFHimjfQUozDL2JlH4RAiT1AJ93ogxN/4i9csJ/8f9db1/lFxquWQCfe8W8
-TZ59L53fXcPOxzN1OzOuGfg=
-=kfki
+iD8DBQFHkNJuQUozDL2JlH4RAqNbAJ0Ry6kMKzX9n2a1uMCyroIHdqn6+QCfcRfQ
+3VWimN4z6yEnB3p0DNEWM2k=
+=r7I8
 -----END PGP SIGNATURE-----
