@@ -1,0 +1,3 @@
+MD5 d2ee4af44bb5008df6eda9732d5d1270 Image-ExifTool-7.13.tar.gz 1538635
+RMD160 2ead6890c274f3899703474e3fedd9b87f2340d1 Image-ExifTool-7.13.tar.gz 1538635
+SHA256 848fca14022be595fb794b302790f1cabc79d39ac2de79f1e57de65afb783f26 Image-ExifTool-7.13.tar.gz 1538635
