@@ -1,6 +1,11 @@
 # ChangeLog for media-libs/exiftool
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/exiftool/ChangeLog,v 1.32 2008/01/13 19:39:05 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/exiftool/ChangeLog,v 1.33 2008/01/18 16:22:58 graaff Exp $
+
+*exiftool-7.13 (18 Jan 2008)
+
+  18 Jan 2008; Hans de Graaff <graaff@gentoo.org> +exiftool-7.13.ebuild:
+  Version bump #206467
 
 *exiftool-7.11 (13 Jan 2008)
 
